@@ -2,7 +2,7 @@ sdparm (1.06-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 31 Jul 2010 12:00:00 +0200
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 31 Oct 2010 15:00:00 -0400
 
 sdparm (1.05-0.1) unstable; urgency=low
 
